<resources>
    <string name="api_key">AAAARhk81y4:APA91bFHLT_i3c4CcPaC5c426RtBlUgzMp1nsBXn60-byAsc9m3aMQc__M8euIXwf_rW6KGOL1Yhx909EwYP-SfNAI-YSdMEjgnfLiljarlBOxQf2rOqVTCgl71EgtS4yZEErVmqGT9m</string>
    <string name="ucrop_error_input_data_is_absent" translatable="false">Both input and output Uri must be specified</string>
    <string name="ucrop_label_edit_photo">Edit Photo</string>
    <string name="ucrop_label_original">Original</string>
    <string name="ucrop_menu_crop">Crop</string>
    <string name="ucrop_mutate_exception_hint" translatable="false">Therefore, override color resource (ucrop_color_toolbar_widget) in your app to make it work on pre-L devices</string>
    <string name="url_base">http://gde-tusa.ru/</string>
    <string name="url_online">http://gde-tusa.ru/is_online/</string>
    <string name="url_show">http://gde-tusa.ru/show1/</string>
    <string name="url_login">http://gde-tusa.ru/login/</string>
    <string name="url_search">http://gde-tusa.ru/search/</string>
    <string name="url_continue">http://gde-tusa.ru/continue/</string>
    <string name="url_visit">http://gde-tusa.ru/visit/</string>
    <string name="url_get_place">http://gde-tusa.ru/get/place.php</string>
    <string name="url_get_user">http://gde-tusa.ru/get/user.php</string>
    <string name="url_send_message">http://gde-tusa.ru/room/add.php</string>
    <string name="url_send_add_friend">http://gde-tusa.ru/friend/add.php</string>
    <string name="url_send_cancel_friend">http://gde-tusa.ru/friend/remove.php</string>
    <string name="url_send_accept_friend">http://gde-tusa.ru/friend/accept.php</string>
    <string name="url_send_reject_friend">http://gde-tusa.ru/friend/reject.php</string>
    <string name="url_send_delete_friend">http://gde-tusa.ru/friend/delete.php</string>
    <string name="url_attach_picture">http://gde-tusa.ru/attach/picture.php</string>
    <string name="url_user_like">http://gde-tusa.ru/user/like.php</string>
    <string name="url_user_visit">http://gde-tusa.ru/user/visit.php</string>
    <string name="google_client_id_release">301071128366-cd5dhr3t88ahin954u0oadtfk44eptlo.apps.googleusercontent.com</string>
    <string name="facebook_app_id">2790665134524203</string>
    <string name="fb_login_protocol_scheme">fb2790665134524203</string>
    <string name="app_name">Мы вместе</string>
    <string name="title_activity_maps">Карта</string>
    <string name="title_activity_take">TakeActivity</string>
    <string name="custom_status">Пользовательский</string>
    <string name="todo">TODO</string>
    <string name="title_activity_capture_image">CaptureImageActivity</string>
    <string name="enter_hint">Введите подпись</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sign_in">Войти</string>
    <string name="sign_in_google">Войти с помощью Google</string>
    <string name="sign_in_vk">Войти с помощью Vk</string>
    <string name="sign_in_fb">Войти с помощью Facebook</string>
    <string name="add_place">Добавить место</string>
    <string name="my_places">Мои тусы</string>
    <string name="title_my_places">Мои тусы</string>
    <string name="server_client_id">w</string>
    <string name="error_send_account">Произошла ошибка при отправке данных</string>
    <string name="title_profile">Профиль</string>
    <string name="settings">Настройки</string>
    <string name="hint_login">Введите логин</string>
    <string name="hint_first_name">Введите имя</string>
    <string name="hint_last_name">Введите фамилию</string>
    <string name="label_sex">Пол:</string>
    <string name="show_sex">Показывать пол</string>
    <string name="label_status">Статус:</string>
    <string name="hint_custom_status">Введите статус</string>
    <string name="show_in_map">Показывать на карте</string>
    <string name="label_date_birth">Дата рождения:</string>
    <string name="select">Выбрать</string>
    <string name="format_date_birth">%d-%s-%s</string>
    <string name="show_date_birth">Показывать возраст</string>
    <string name="gallery">Альбом</string>
    <string name="access_coarse_location">Доступ к данным о примерном местоположении устройства</string>
    <string name="error_find_location">Не удалось определить местоположение</string>
    <string name="anonymous_visit">Анонимное посещение</string>
    <string name="option_anonymous_visits">Анонимное посещение</string>
    <string name="label_date_begin">Дата начала:</string>
    <string name="label_date_end">Дата завершения:</string>
    <string name="hint_count_participant">Число участников</string>
    <string name="hint_comment">Комментарий</string>
    <string name="hint_title">Название</string>
    <string name="hint_custom_key">Ваш ключ шифрования</string>
    <string name="hint_description">Описание</string>
    <string name="hint_location">Локация</string>
    <string name="label_category">Категория:</string>
    <string name="error_title">Название не может быть пустым или короче 2х символов</string>
    <string name="error_location">Локация не может быть пустым</string>
    <string name="set_place">Туса</string>
    <string name="bottom_sheet_option_camera">Use Camera</string>
    <string name="bottom_sheet_option_gallery">Upload from Gallery</string>
    <string name="bottom_sheet_option_heading">Add Photo</string>
    <string name="bottom_sheet_option_remove_photo">Remove Photo</string>
    <string name="continue_add">Продолжить</string>
    <string name="more_params">Больше параметров...</string>
    <string name="label_time_visit">Время посещения:</string>
    <string name="any">Любое</string>
    <string name="error_geocoder">Ошибка геокодирования</string>
    <string name="not_find_results">Не найденно</string>
    <string name="select_address">Выбирете адрес</string>
    <string name="cancel">Отмена</string>
    <string name="label_count_participant">Число участников:</string>
    <string name="label_anonymous_visit">Анонимное посещение:</string>
    <string name="ok">Да</string>
    <string name="no">Нет</string>
    <string name="button_login">Авторизоваться</string>
    <string name="please_login_for_visit_place">Пожалуйста авторизуйтесь, чтобы посещать места</string>
    <string name="please_login_for_like">Пожалуйста авторизуйтесь, чтобы ставить лайки</string>
    <string name="please_login_for_add_friend">Пожалуйста авторизуйтесь, чтобы добавлять друзей</string>
    <string name="please_login_for_add_comment">Пожалуйста авторизуйтесь, чтобы добавлять комментарии</string>
    <string name="please_login_for_add_place">Пожалуйста авторизуйтесь, чтобы добавлять места на карту</string>
    <string name="please_login_for_check_place">Пожалуйста авторизуйтесь, чтобы отметиться на карте</string>
    <string name="album_activity">Альбом</string>
    <string name="album_place">Альбом</string>
    <string name="selected_action">Выбирете действие</string>
    <string name="set_star">Сделать главной</string>
    <string name="remove">Удалить</string>
    <string name="change_hint">Изменить подпись</string>
    <string name="save_place">Сохранить место</string>
    <string name="action_remove">Удалить</string>
    <string name="remove_place">Удалить место</string>
    <string name="message_remove_place">Вы действительно хотите удалить место</string>
    <string name="label_description">Описание:</string>
    <string name="move_to_place">Перейти к месту</string>
    <string name="move_to_user">Перейти к пользователю</string>
    <string name="label_like">Рейтинг:</string>
    <string name="activity_place">Место</string>
    <string name="gps">GPS</string>
    <string name="access_text">Для работы приложения необходимы следующие разрешения</string>
    <string name="need_permission_access">Для работы приложения необходимы разрешения: GPS, Fine location, Write
        storage
    </string>
    <string name="error_online">Нет интернета</string>
    <string name="requires_internet">Для работы приложения требуется интернет</string>
    <string name="show">Показать</string>
    <string name="hide">Скрыть</string>
    <string name="photo_up">Поднять на верх</string>
    <string name="access_text2">Не обязательно:</string>
    <string name="label_title">Название:</string>
    <string name="label_location">Локация:</string>
    <string name="negative">Нет</string>
    <string name="positive">Да</string>
    <string name="no_set">Не заданно</string>
    <string name="dialog_title_visit">Записаться на посещение</string>
    <string name="dialog_message_visit">Я приду, меня учитывать</string>
    <string name="dialog_title_anonymous_visit">Приду анонимно</string>
    <string name="dialog_message_anonymous_visit">Я приду но не учитывать меня</string>
    <string name="go_anonymous_visit">Приду анонимно</string>
    <string name="go_visit">Приду</string>
    <string name="label_name">Логин:</string>
    <string name="label_full_name">Имя:</string>
    <string name="label_first_name">Имя:</string>
    <string name="label_last_name">Фамилия:</string>
    <string name="label_age">Возраст:</string>
    <string name="null_date_birth">Не указанно</string>
    <string name="empty"/>
    <string name="change_location">Изменить место</string>
    <string name="edit_place">Изменить место</string>
    <string name="cluster_info_text">Мест: %d, пользователей: %d</string>
    <string name="format_count_users">Мест: %d</string>
    <string name="format_count_places">Пользователей: %d</string>
    <string name="unlimited">Неограниченно</string>
    <string name="visits">Посешения</string>
    <string name="title_visits">Посешения</string>
    <string name="visit">Посешение</string>
    <string name="visit_place">Посешения</string>
    <string name="option_interests">Интересы</string>
    <string name="option_visits">Посешения</string>
    <string name="option_add_place">Добавить тусу</string>
    <string name="label_type_find">Поиск на карте</string>
    <string name="hint_distance">Дистанция</string>
    <string name="unit_km">км</string>
    <string name="not_visits">Нет посещений</string>
    <string name="not_visit_places">Нет отмеченных мест</string>
    <string name="load_photo">Загрузить изображения</string>
    <string name="dont_images">Нет изображений</string>
    <string name="settings_channel">Настройки канала</string>
    <string name="check_place_title">Отметиться на карте</string>
    <string name="visit_place_title">Посетить место</string>
    <string name="check_place_message">Отметиться на карте</string>
    <string name="visit_place_message">Посетить место</string>
    <string name="show_notifications">Показывать уведомления</string>
    <string name="label_check_place">Отмечать на месте</string>
    <string name="label_login">Логин:</string>
    <string name="add_friend">Добавить в друзья</string>
    <string name="add_friend_title">Отправить запрос на дружбу</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="logout">Выйти</string>
    <string name="nearby">Рядом %s</string>
    <string name="create_photo">Сделать фото</string>
    <string name="select_in_gallery">Выбрать из галереии</string>
    <string name="select_in_album">Выбрать из альбома</string>
    <string name="edit_interests">Интересы:</string>
    <string name="not_interests">Нет интересов</string>
    <string name="show_online">Показывать онлайн</string>
    <string name="show_offline">Показывать оффлайн</string>
    <string name="show_all">Показывать всех</string>
    <string name="show_current_date">Показывать текущие события</string>
    <string name="show_old_date">Показывать прошедшие события</string>
    <string name="show_future_date">Показывать будующие события</string>
    <string name="show_all_date">Показывать все события</string>
    <string name="enable_sound_notification">Звук при важных уведомлениях</string>
</resources>