<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.SettingsActivity">
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:paddingTop="48dp"
                android:paddingLeft="14dp" android:paddingRight="14dp">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <CheckBox android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:layout_marginBottom="4dp" android:textColor="@color/colorGray"
                      android:text="@string/show_sex" android:textSize="18sp" android:layout_gravity="bottom"
                      android:id="@+id/checkbox_show_sex"/>
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="vertical" android:gravity="center_vertical"
                          android:layout_marginBottom="4dp">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:textColor="@color/colorGray"
                          android:text="@string/show_in_map" android:textSize="18sp" android:layout_marginLeft="6dp"/>
                <Spinner android:layout_width="match_parent" android:layout_height="wrap_content"
                         android:id="@+id/spinner_show_in_map"/>
            </LinearLayout>
            <CheckBox android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:layout_marginBottom="4dp" android:textColor="@color/colorGray"
                      android:text="@string/show_date_birth" android:textSize="18sp" android:layout_gravity="bottom"
                      android:id="@+id/checkbox_show_age"/>
            <CheckBox android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:layout_marginBottom="4dp" android:textColor="@color/colorGray"
                      android:text="@string/enable_sound_notification" android:textSize="18sp" android:layout_gravity="bottom"
                      android:id="@+id/checkbox_enable_sound_notification"/>
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:layout_marginBottom="4dp">
                <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:id="@+id/button_edit_interests" android:text="@string/edit_interests"
                        style="@style/ButtonProfile"/>
                <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:id="@+id/button_edit_profile" android:text="@string/edit_profile"
                        style="@style/ButtonProfile"/>
                <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:id="@+id/button_add_place" android:text="@string/add_place"
                        style="@style/ButtonProfile" android:visibility="gone"/>
            </LinearLayout>
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:orientation="horizontal" android:id="@+id/view_logout"
                          android:layout_marginLeft="2dp"
            >
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                           android:contentDescription="@string/todo"
                           app:srcCompat="@drawable/baseline_exit_to_app_black_18dp"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:layout_marginRight="8dp"
                          android:text="@string/logout"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingTop="8dp" android:paddingLeft="16dp">
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:orientation="horizontal" android:gravity="center_vertical">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                       android:id="@+id/image_view_back" android:contentDescription="@string/todo"
                       app:srcCompat="@drawable/baseline_arrow_back_black_18dp"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:layout_marginLeft="24dp"
                      android:text="@string/settings"/>
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>