<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:orientation="horizontal" android:layout_marginLeft="16dp" android:layout_marginTop="8dp">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                       android:id="@+id/image_view_back" android:contentDescription="@string/todo"
                       android:background="@drawable/baseline_arrow_back_black_18dp"
                       android:layout_marginRight="8dp"/>
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                       android:id="@+id/image_view_settings" android:contentDescription="@string/todo"
                       android:background="@drawable/baseline_settings_black_18dp"/>
        </LinearLayout>
        <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_alignParentRight="true">
            <ImageView android:layout_width="18dp" android:layout_height="18dp"
                       android:contentDescription="@string/todo" android:id="@+id/image_view_menu"
                       android:background="@drawable/baseline_more_vert_black_18dp" android:layout_margin="16dp"/>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:gravity="center_horizontal" android:layout_marginBottom="8dp"
                    android:id="@+id/view_avatar">
        <ImageView android:layout_width="150dp" android:layout_height="150dp"
                   android:id="@+id/image_view_avatar" android:background="@drawable/badge_background"
                   android:contentDescription="TODO"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:src="@drawable/baseline_add_black_18dp"
                android:layout_alignRight="@id/image_view_avatar"
                android:layout_alignBottom="@id/image_view_avatar" android:id="@+id/fab_icon"/>
    </RelativeLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="vertical" android:gravity="center_horizontal">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/text_view_sign" android:text="@string/sign_in"
                  android:gravity="center_horizontal"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/text_view_name" android:text="@string/hint_login"
                  android:layout_marginBottom="8dp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/text_view_location" android:text="@string/hint_location"
                  android:layout_marginBottom="8dp"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="vertical" android:gravity="center_horizontal">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/text_view_interests" android:text="@string/edit_interests"
        />
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:id="@+id/view_interests" android:orientation="vertical"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/text_view_not_interests" android:text="@string/not_interests"
                  android:gravity="center_horizontal"/>
    </LinearLayout>
</LinearLayout>