<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" android:padding="8dp">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <RelativeLayout android:layout_width="100dp" android:layout_height="100dp"
                            android:id="@+id/image_view" android:layout_gravity="center_horizontal">
                <ImageView android:layout_width="match_parent" android:layout_height="match_parent"
                           android:id="@+id/image_view_icon"
                           android:contentDescription="@string/todo"/>
            </RelativeLayout>
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:layout_marginLeft="8dp">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:id="@+id/text_view_title"
                          android:textStyle="bold" android:text="Title"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:id="@+id/text_view_description" android:text="Description"/>
                <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:orientation="horizontal" android:id="@+id/view_date_begin"
                              android:layout_marginTop="8dp" android:visibility="gone">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:text="@string/label_date_begin" android:layout_marginRight="8dp"/>
                    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:id="@+id/text_view_date_begin"/>
                </LinearLayout>
                <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:orientation="horizontal" android:id="@+id/view_date_end"
                              android:layout_marginTop="8dp" android:visibility="gone">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:text="@string/label_date_end" android:layout_marginRight="8dp"/>
                    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:id="@+id/text_view_date_end"/>
                </LinearLayout>
                <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:orientation="horizontal" android:id="@+id/view_time_visit"
                              android:layout_marginTop="8dp" android:visibility="gone">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:text="@string/label_time_visit" android:layout_marginRight="8dp"/>
                    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:id="@+id/text_view_time_visit"/>
                </LinearLayout>
                <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:orientation="horizontal" android:id="@+id/view_like"
                              android:layout_marginTop="8dp">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:text="@string/label_like" android:layout_marginRight="8dp"/>
                    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:id="@+id/text_view_like"/>
                </LinearLayout>
                <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:orientation="vertical" android:id="@+id/view_nearby"
                              android:layout_marginTop="8dp">
                    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:id="@+id/text_view_count" android:text="@string/nearby"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>